different components are only visible for correct roles #62

--- a/src/styles/views/Game.scss
+++ b/src/styles/views/Game.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
     overflow: auto;
 }
@@ -40,7 +40,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 85px;
+    width: 100%;
     height: 150px;
     background-color: #b699db;
     border-radius: 20px;
